--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     href="index.css" />
   </head>
   <body>
-         <span class="js-weather"></span>
+        class="js-weather"
       
       <script src="weather.js"></script>
   </body>
