--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     href="index.css" />
   </head>
   <body>
+    <span>12345</span>
         class="js-weather"
       
       <script src="weather.js"></script>
