--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     href="index.css" />
   </head>
   <body>
-    <span>12345</span>
-        class="js-weather"
+    
+        "js-weather"
       
       <script src="weather.js"></script>
   </body>
