--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     
-        "js-weather"
+        class="js-weather"
       
       <script src="weather.js"></script>
   </body>
