--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     
-        class="js-weather"
+        <span class="js-weather"></span>
       
       <script src="weather.js"></script>
   </body>
