--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     href="index.css" />
   </head>
   <body>
-    
+    <span>12345</span>
         <span class="js-weather"></span>
       
       <script src="weather.js"></script>
