--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     href="index.css" />
   </head>
   <body>
-    <span>"12345"</span>
-        <span class="js-weather"></span>
+    <span>"123"</span>
+        <div class="js-weather"></div>
       
       <script src="weather.js"></script>
   </body>
