--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   </head>
   <body>
     <span>"123"</span>
-        <div class="js-weather"></div>
+        <div class="js-weather">
+    <h1 class="js-title"></h1>
+    </div>
       
       <script src="weather.js"></script>
   </body>
