--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html>
   <head>
     <title>Weather</title>
+    <meta charset="utf-8">
     <link rel="stylesheet"
     href="index.css" />
   </head>
+  
   <body>
-    <span>"12"</span>
-        <div class="js-weather">
+    <span>"1"</span>
+        <div type = "text" class="js-weather">
     <h1 class="js-title"></h1>
     </div>
       
