--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
   
   <body>
     <span>"1"</span>
-        <div type = "text" class="js-weather">
-    <h1 class="js-title"></h1>
-    </div>
+        <div type = "text" class="js-weather"></div>
       
       <script src="weather.js"></script>
   </body>
